Version 2.70:   ( Fri Apr  6 12:47:25 IDT 2012 )
------------------------------------------------

* Fix the test dependency (in the new t/31comments_with_spaces.t test)
on IO::stringy (now writing it to a file).
    - This caused some CPAN Testers failures such as:
        - http://www.cpantesters.org/cpan/report/c16b9978-7f40-11e1-9d6f-f6dbfa7543f5

* Modernized some of the open() calls in the test files.
    - three args open, lexcial file handles, etc.

Version 2.69:   ( Thu Apr  5 12:05:46 IDT 2012 )
------------------------------------------------

* Fix https://sourceforge.net/tracker/?func=detail&aid=3388382&group_id=6926&atid=106926
    - "Trailing comments with whitespace are not recognised"
    - Thanks to briconaut for the report and to rbowen for the patch and test.

* Add the method ->OutputConfigToFileHandle which is a more explicit and
safer version of ->OutputConfig.
    - ->OutputConfig now uses it.
    - all existing tests pass, and a new test was added to 
    t/15store-and-retrieve-here-doc-terminator.t .

* Started refactoring the code.
    - Expand tabs to spaces.
    - many other small changes.

Version 2.68:    ( Tue Jun 21 22:14:39 IDT 2011 )
-------------------------------------------------

* Typo correction: https://rt.cpan.org/Ticket/Display.html?id=69003

Version 2.67:    ( Tue Jun 21 14:55:07 IDT 2011 )
-------------------------------------------------

* Made sure that parameters with empty values will be written to the file.
    - Fixes https://rt.cpan.org/Public/Bug/Display.html?id=68554 .

Version 2.66:    ( Sat Jan 29 18:28:53 IST 2011 )
-------------------------------------------------

* Add support for the handle_trailing_comment option to support trailing
comments at the end of a param=value line.
    - Fixes https://rt.cpan.org/Public/Bug/Display.html?id=43843 .
    - Original patch by Peter Xu.
    - Some comments and corrections of the patch by Shlomi Fish (the current 
    Config-IniFiles maintainer.)
